internal/testdata/sdk/error/fixtures/not_implemented_error.go
// Generated by Fern. Do not edit.

package api

import (
	json "encoding/json"
	core "github.com/fern-api/fern-go/internal/testdata/sdk/error/fixtures/core"
)

type NotImplementedError struct {
	*core.APIError
	Body string
}

func (n *NotImplementedError) UnmarshalJSON(data []byte) error {
	var body string
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	n.StatusCode = 501
	n.Body = body
	return nil
}

func (n *NotImplementedError) MarshalJSON() ([]byte, error) {
	return json.Marshal(n.Body)
}
